# easy-exon

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/easy_exon/: __init__.py  client.py  exceptions.py
src/easy_exon/filters/: builder.py  enums.py
src/easy_exon/models/: act.py  csg.py  inspection.py  object.py  organization.py  remark.py  universal.py  user.py  work.py
src/easy_exon/models/act/: certificate.py  estimate.py
src/easy_exon/models/itd/: act.py  common.py  general_journal.py  material.py  ojr.py  order.py  schema.py  task.py
src/easy_exon/models/otitb/: act.py  document.py  journal.py
src/easy_exon/models/pir/: VPR_doc.py  expertise.py  project_work_doc.py  work_doc.py  work_extra.py
src/easy_exon/models/sk/: common.py  document.py  inspection.py  journal.py  registry.py  remark.py
src/easy_exon/resources/: acts.py  csgs.py  inspections.py  objects.py  organizations.py  remarks.py  users.py  works.py
src/easy_exon/resources/act/: certificates.py  estimates.py
src/easy_exon/resources/isr/: csgs.py  works.py
src/easy_exon/resources/itd/: acts.py  general_journals.py  materials.py  ojrs.py  orders.py  schemas.py  tasks.py
src/easy_exon/resources/otitb/: acts.py  documents.py  journals.py
src/easy_exon/resources/pir/: VPR_docs.py  expertises.py  project_work_docs.py  vpr_docs.py  work_docs.py  work_extras.py
src/easy_exon/resources/sk/: documents.py  inspections.py  journals.py  registries.py  remarks.py
