[build-system]
requires = ["hatchling>=1.22"]
build-backend = "hatchling.build"

[project]
name = "easy-exon"
version = "0.1.0"
description = "Exon API wrapper"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name="Andrey Grekhov", email="falla.code@gmail.com"}
]

dependencies = []

[project.urls]
Homepage = "https://github.com/fallec/easy-exon"
Documentation = "https://github.com/fallec/easy-exon"
